--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,27 @@
-<section class="">
+<section class="hero-section">
+  <div class="container">
+    <h1 class="hero-title">
+      Hello.<br />
+      I’m Fullstack developer<br />
+      Lloyd Jefferson.
+    </h1>
 
+    <ul class="hero-social-list">
+      <li class="hero-social-item">
+        <a class="hero-social-link" href="">IG</a>
+      </li>
+      <li class="hero-social-item">
+        <a class="hero-social-link" href="">FB</a>
+      </li>
+      <li class="hero-social-item">
+        <a class="hero-social-link" href="">YT</a>
+      </li>
+      <li class="hero-social-item">
+        <a class="hero-social-link" href="">GH</a>
+      </li>
+      <li class="hero-social-item">
+        <a class="hero-social-link" href="">lloydjefferson@gmail.com</a>
+      </li>
+    </ul>
+  </div>
 </section>
