--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,3 +1,46 @@
-.header {
-    position: relative;
+.hero-section {
+  padding: 32px 32px;
+  position: relative;
+  background-image: url('../img/hero/hero.png');
+  margin: 0 auto;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero-title {
+  display: flex;
+  justify-content: center;
+
+  padding-top: 300px;
+  padding-bottom: 330px;
+
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 90px;
+  line-height: 100%;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  color: var(--main-text);
+}
+
+.hero-social-list {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+}
+
+.hero-social-link {
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  border-radius: 60px;
+  padding: 18px 20px;
+  width: 55px;
+  height: 55px;
+
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  color: var(--main-text);
 }
