add variables, add img,

--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -3,15 +3,25 @@
     <div class="work_together_wrap">
       <div class="work_together_wrap_picture">
         <picture>
-          <source srcset="1x, 2x" type="image/png" media="(min-width: 768px)" />
+          <source
+            srcset="
+              /img/work-together-img/foto-70x70px-1x.jpg 1x,
+              /img/work-together-img/foto-70x70px-2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
 
           <source
-            srcset="1x, 2x"
-            type="image/png"
-            media="(min-width: 320px )"
+            srcset="
+              /img/work-together-img/foto-44x44px-1x.jpg 1x,
+              /img/work-together-img/foto-44x44px-2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 320px)"
           />
           <img
-            src=""
+            src="/img/work-together-img/foto-44x44px-1x.jpg"
             class="work_together_logo"
             alt="foto"
             width="44"
