--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,12 +1,19 @@
 :root {
-  color: #0c0c0c;
-  background-color: #1c1d20;
+  /* color: #fafafa; */
+  /* background-color: #1c1d20; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --accent-color: #0041e8;
+  --accent-color-hover: #0039d1;
+  --main-font: 'Inter Tight', sans-serif;
+  --main-color: #fafafa;
+  --main-background-color: #1c1d20;
+  --color-text: rgba(250, 250, 250, 0.6);
 }
 
 html {
@@ -14,12 +21,31 @@ html {
 }
 
 body {
-  background: #1c1d20;
+  /* background-color: #1c1d20; */
+  /* color: #fafafa; */
+  /* font-family: 'Inter Tight'; */
+
+  background-color: var(--main-background-color);
+  font-family: var(--main-font);
+  color: var(--main-color);
 }
 
 input,
 textarea {
   outline: none;
+}
+
+button {
+  color: var(--main-color);
+  background-color: var(--accent-color);
+  font-family: var(--main-font);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.02em;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .visually-hidden {
