--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -28,9 +28,7 @@
 }
 
 .work_together_wrap_logo_text {
-  color: #fafafa;
   font-size: 40px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1;
   letter-spacing: -0.03em;
@@ -38,7 +36,7 @@
 }
 
 .work_together_wrap_logo_text span {
-  color: #0041e8;
+  color: var(--accent-color);
 }
 
 /* ==================================== */
@@ -62,11 +60,13 @@
 }
 
 .work_together_input_email {
-  background-color: #1c1d20;
-  color: rgba(250, 250, 250, 0.6);
+  /* background-color: #1c1d20; */
+  background-color: var(--main-background-color);
+  /* color: rgba(250, 250, 250, 0.6); */
+  color: var(--accent-colorcolor-text);
   border: none;
+  padding: 0px;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: -0.02em;
@@ -75,7 +75,7 @@
 }
 
 .work_together_input_text {
-  background-color: #1c1d20;
+  background-color: var(--main-background-color);
   height: 24px;
   width: 343px;
 
@@ -86,32 +86,33 @@
   border: none;
   outline: none;
   resize: none;
+  padding: 0px;
 
-  color: rgba(250, 250, 250, 0.6);
+  /* color: rgba(250, 250, 250, 0.6); */
+  color: var(--accent-colorcolor-text);
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: -0.02em;
 }
 .work_together_button {
-  color: #fafafa;
-  background-color: #0041e8;
+  /* color: #fafafa;
+  background-color: var(--accent-color);
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: -0.02em;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: -0.02em;
-  border: none;
 }
 
 .work_together_button:hover,
-.work_together_button :focus,
+.work_together_button:focus,
 .work_together_button:active {
-  background-color: #0039d1;
+  background-color: var(--accent-color-hover);
 }
 
 /* ========================= */
@@ -126,19 +127,18 @@
   border-radius: 60px;
   border: 1px solid rgba(250, 250, 250, 0.2);
   padding: 10px 12px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work_together_address_item:hover,
-.work_together_address_item:focus {
+.work_together_address_item:focus,
+.work_together_address_item:active {
   border: 1px solid #fafafa;
 }
 
 .work_together_address_link {
-  color: #fafafa;
   font-size: 14px;
-  font-style: normal;
   font-weight: 500;
-  line-height: normal;
   letter-spacing: -0.02em;
 }
 /* ============================== */
@@ -153,10 +153,7 @@
   visibility: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 138px;
-  padding-bottom: 138px;
+  padding: 138px 16px;
 }
 
 .is-open {
@@ -168,7 +165,7 @@
 .work_together_modal {
   border-radius: 20px;
   border: 1px solid rgba(250, 250, 250, 0.1);
-  background-color: #1c1d20;
+  background-color: var(--main-background-color);
   position: relative;
 }
 
@@ -187,23 +184,27 @@
   padding: 64px 32px 64px 32px;
 }
 
-.work_together_modal_title {
-  color: #fafafa;
-  text-align: center;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
+.work_together_modal_title,
+.work_together_modal_text {
   line-height: 1.5;
   letter-spacing: -0.02em;
+  text-align: center;
+}
+
+.work_together_modal_title {
+  font-size: 20px;
+  font-weight: 600;
   margin-bottom: 16px;
+  /* line-height: 1.5;
+  letter-spacing: -0.02em; */
+  /* text-align: center; */
 }
 
 .work_together_modal_text {
-  color: rgba(250, 250, 250, 0.6);
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
+  color: var(--color-text);
   font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: -0.02em;
+  /* line-height: 1.5;
+  letter-spacing: -0.02em; */
+  /* text-align: center; */
+  /* color: rgba(250, 250, 250, 0.6); */
 }
