--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,3 +1,71 @@
-<section class="">
+<section class="benefits">
+    <div class="container benefits-container">
+        <div class="benefits-title-container">
+            <h2 class="benefits-title">Benefits of working with me</h2>
+        </div>
+
+        <div class="benefits-content">
+            <ul class="benefits-list">
+
+                <li class="benefits-item">
+                    <div class="benefits-svg-wrap">
+                        <svg class="benefits-svg" width="24" height="24">
+                            <use href="./img/symbol-defs.svg#icon-user" />
+                        </svg>
+                    </div>
+                    <h3 class="benefits-subtitle">Expertise</h3>
+                    <p class="benefits-text">
+                        As a highly experienced developer, I have deep knowledge of
+                        programming and website development.
+                    </p>
+                </li>
+
+                <li class="benefits-item">
+                    <div class="benefits-svg-wrap">
+                        <svg class="benefits-svg" width="24" height="24">
+                            <use href="./img/symbol-defs.svg#icon-message" />
+                        </svg>
+                    </div>
+                    <h3 class="benefits-subtitle">Communication</h3>
+                    <p class="benefits-text">
+                        Understanding your needs and wants is my priority and I am always
+                        open to discussions and corrections.
+                    </p>
+                </li>
+
+                <li class="benefits-item">
+                    <div class="benefits-svg-wrap">
+                        <svg class="benefits-svg" width="24" height="24">
+                            <use href="./img/symbol-defs.svg#icon-brush" />
+                        </svg>
+                    </div>
+                    <h3 class="benefits-subtitle">Art</h3>
+                    <p class="benefits-text">
+                        Thanks to my creative nature, I am ready to accept challenges and
+                        help you bring your ideas to life.
+                    </p>
+                </li>
+
+                <li class="benefits-item">
+                    <div class="benefits-svg-wrap">
+                        <svg class="benefits-svg" width="24" height="24">
+                            <use href="./img/symbol-defs.svg#icon-hourglass" />
+                        </svg>
+                    </div>
+                    <h3 class="benefits-subtitle">Urgent execution</h3>
+                    <p class="benefits-text">
+                        I understand how important time is to you. Ready to work quickly and
+                        efficiently, without reducing the quality of work.
+                    </p>
+                </li>
+
+            </ul>
+
+            <a href="./work-together.html" class="benefits-button">Order the project</a>
+
+
+        </div>
+
+    </div>
 
 </section>
