--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,24 @@
-<header class="">
+<header class="header-section">
+  <div class="container">
+    <div class="header-top-line">
+      <a class="header-logo-link" href="../index.html">
+        <img
+          class="header-logo-image"
+          srcset="
+            ../img/header-logo/logo.png    1x,
+            ../img/header-logo/logo@2x.png
+          "
+          src="../img/header-logo/logo.png"
+          alt="Jefferson logo"
+          width="80"
+        />
+        jefferson*
+      </a>
+      <nav class="nav-section">
+        <a class="menu-link" href="">Menu</a>
+      </nav>
 
+      <a class="order-button" href="/">Order the project</a>
+    </div>
+  </div>
 </header>
