--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,19 +8,25 @@
 
     <ul class="hero-social-list">
       <li class="hero-social-item">
-        <a class="hero-social-link" href="">IG</a>
+        <a class="hero-social-link" href="https://www.instagram.com/goitclub/"
+          >IG</a
+        >
       </li>
       <li class="hero-social-item">
-        <a class="hero-social-link" href="">FB</a>
+        <a class="hero-social-link" href="https://www.facebook.com/goITclub/"
+          >FB</a
+        >
       </li>
       <li class="hero-social-item">
-        <a class="hero-social-link" href="">YT</a>
+        <a class="hero-social-link" href="https://www.youtube.com/c/GoIT">YT</a>
       </li>
       <li class="hero-social-item">
         <a class="hero-social-link" href="">GH</a>
       </li>
       <li class="hero-social-item">
-        <a class="hero-social-link" href="">lloydjefferson@gmail.com</a>
+        <a class="hero-social-link" href="mailto:lloydjefferson@gmail.com"
+          >lloydjefferson@gmail.com</a
+        >
       </li>
     </ul>
   </div>
