--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,12 @@
 :root {
+  --font-family: 'Inter Tight', sans-serif;
   color: #0c0c0c;
   background-color: #1c1d20;
+  --background: #1c1d20;
+  --cards: #242527;
+  --arrow: #3b3b3b;
+  --button-text: #ed3b44;
+  --main-text: #fafafa;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
