--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,6 +3,7 @@
   z-index: 999;
   width: 100%;
 }
+
 .header-top-line {
   display: flex;
   justify-content: space-between;
@@ -13,36 +14,237 @@
   align-items: center;
   margin-top: 32px;
 }
-.header-logo-image {
-  background-color: transparent;
-}
+
 .header-logo-link {
   display: flex;
   gap: 8px;
+
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 20px;
   letter-spacing: -0.02em;
   color: var(--main-text);
 }
+
 .menu-link {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .menu-link {
+    display: inline-block;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: -0.02em;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: var(--main-text);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-link:hover,
+  .menu-link:active {
+    color: #0041e8;
+  }
+}
+
+.order-button {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .order-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #0041e8;
+    border-radius: 60px;
+    padding: 18px 24px;
+    width: 163px;
+    height: 55px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: -0.02em;
+    color: var(--main-text);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .order-button:hover,
+  .order-button:active {
+    background-color: #0039d1;
+  }
+}
+
+.burger-menu-button {
+  border: none;
+  background-color: transparent;
+}
+
+.burger-menu-icon {
+  display: inline-block;
+}
+
+@media only screen and (min-width: 768px) {
+  .burger-menu-button {
+    display: none;
+  }
+}
+
+/* PC/Tablet menu */
+
+.nav-section {
+  position: relative;
+}
+
+.menu-nav {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .menu-nav {
+    position: absolute;
+    display: inline-block;
+    top: 26px;
+    left: -13.5px;
+    width: 67px;
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-nav.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+
+  .menu-nav-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+  }
+
+  .menu-nav-link {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: -0.02em;
+    color: var(--main-text);
+  }
+}
+
+/* Mobile Menu */
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../img/hero/hero.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu-wrap {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  height: 100%;
+}
+
+.menu-close-button {
+  position: absolute;
+  top: 32px;
+  right: 16px;
+
+  background-color: transparent;
+  border: none;
+}
+
+.mobile-menu-nav {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 302px;
+  margin-bottom: 289px;
+}
+
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.mobile-menu-link {
+  display: flex;
+  justify-content: center;
+
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 16px;
   letter-spacing: -0.02em;
   text-decoration: underline;
+  text-underline-offset: 5px;
   text-decoration-skip-ink: none;
   color: var(--main-text);
 }
-.order-button {
-  background: var(--button-text);
+
+.menu-order-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   border-radius: 60px;
-  padding: 18px 24px;
-  width: 163px;
-  height: 55px;
+  padding: 14px 31px;
+  width: 164px;
+  height: 45px;
+  background-color: #0041e8;
+
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   letter-spacing: -0.02em;
   color: var(--main-text);
+}
+
+.menu-order-button:hover,
+.menu-order-button:active {
+  background-color: #0039d1;
 }
