--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,5 +1,5 @@
 <section class="faq-section">
-    <h2 class="faq-title visually-hidden">FAQ</h2>
+    <h2 class="faq-title">FAQ</h2>
     <ul class="faq-list">
         <li class="faq-item">
             <h3 class="faq-question">What programming languages are most often used in your project?
@@ -9,8 +9,8 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer">In the field of web development, there are various technologies and programming languages.
-                Typically, this includes a combination of frontend (client side) and backend (server side) languages.</div>
+            <div class="faq-div"><p class="faq-answer">In the field of web development, there are various technologies and programming languages.
+                Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p></div>
         </li>
         <li class="faq-item">
             <h3 class="faq-question">What are the deadlines for the project?
@@ -20,9 +20,9 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
+            <div class="faq-answer"><p class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
                 the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a
-                difficult task, and it usually occurs during the planning phase of the project.</div>
+                difficult task, and it usually occurs during the planning phase of the project.</p></div>
         </li>
         <li class="faq-item">
             <h3 class="faq-question">What payment methods do you accept?
@@ -32,8 +32,8 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
-                payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+            <div class="faq-answer"><p class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
+                payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
             </div>
         </li>
         <li class="faq-item">
@@ -44,8 +44,8 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer">In the field of web development, there are various technologies and programming languages.
-                Typically, this includes a combination of frontend (client side) and backend (server side) languages.</div>
+            <div class="faq-answer"><p class="faq-answer">In the field of web development, there are various technologies and programming languages.
+                Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p></div>
         </li>
         <li class="faq-item">
             <h3 class="faq-question">Do you provide advice or support?
@@ -55,9 +55,9 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
+            <div class="faq-answer"><p class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
                 the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a
-                difficult task, and it usually occurs during the planning phase of the project.</div>
+                difficult task, and it usually occurs during the planning phase of the project.</p></div>
         </li>
         <li class="faq-item">
             <h3 class="faq-question">What does the process of developing a software product look like from idea to
@@ -68,8 +68,8 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
-                payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+            <div class="faq-answer"><p class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
+                payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
             </div>
         </li>
     </ul>
