--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<section class="benefits">
+<section id="benefits" class="benefits">
     <div class="container benefits-container">
         <div class="benefits-title-container">
             <h2 class="benefits-title">Benefits of working with me</h2>
@@ -57,7 +57,7 @@
 
             </ul>
 
-            <a href="./work-together.html" class="benefits-button">Order the project</a>
+            <a href="#work-together" class="benefits-button">Order the project</a>
 
 
         </div>
