--- a/src/css/base.css
+++ b/src/css/base.css
@@ -44,7 +44,7 @@ button:hover {
   background-color: var(--accent-color-hover);
 }
 
-p {
+.common-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -52,7 +52,7 @@ p {
   color: var(--color-text);
 }
 
-h3 {
+.common-section-title {
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
