--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -1,3 +1,17 @@
+/* :root {
+    --accent-color: #0041e8;
+    --accent-color-hover: #0039d1;
+    --main-font: 'Inter Tight', sans-serif;
+    --main-color: #fafafa;
+    --main-background-color: #1c1d20;
+    --color-text: rgba(250, 250, 250, 0.6);
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+} */
+
 .benefits-title {
     font-size: 16px;
     font-weight: 600;
@@ -19,13 +33,13 @@
 .benefits-item {
     max-width: 344px;
     border-radius: 20px;
-    background: #242527;
+    background-color: #242527;
     padding: 24px;
 }
 
 .benefits-svg-wrap {
     border-radius: 10px;
-    background-color: #0041E8;
+    background-color: var(--accent-color);
     display: flex;
     width: 48px;
     height: 48px;
@@ -44,7 +58,7 @@
     font-size: 20px;
     line-height: 150%;
     letter-spacing: -0.02em;
-    color: #FAFAFA;
+    color: var(--main-color);
     margin-bottom: 8px;
 }
 
@@ -64,10 +78,16 @@
     width: 188px;
     font-size: 16px;
     letter-spacing: -0.02em;
-    color: #FAFAFA;
+    color: var(--main-color);
     background-color: transparent;
     margin-top: 32px;
     margin-bottom: 64px;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.benefits-button:hover, .benefits-button:focus {
+    background-color: var(--accent-color-hover);
 }
 
 @media screen and (min-width: 768px) {
