--- a/src/css/header.css
+++ b/src/css/header.css
@@ -11,7 +11,7 @@
 
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 32px;
 }
 
@@ -100,6 +100,8 @@
 
 .nav-section {
   position: relative;
+
+  margin-top: 10px;
 }
 
 .menu-nav {
