--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -39,13 +39,13 @@
   padding-top: 281px;
   margin-bottom: 212px;
 
-  font-family: var(--font-family);
+  font-family: var(--main-font);
   font-weight: 500;
   font-size: 50px;
   line-height: 100%;
   letter-spacing: -0.03em;
   text-transform: uppercase;
-  color: var(--main-text);
+  color: var(--color-text);
 }
 
 @media only screen and (min-width: 768px) {
@@ -78,11 +78,11 @@
 }
 
 .hero-social-link {
-  font-family: var(--font-family);
+  font-family: var(--main-font);
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.02em;
-  color: var(--main-text);
+  color: var(--color-text);
 }
 
 @media only screen and (min-width: 768px) {
@@ -99,7 +99,7 @@
   border-radius: 60px;
   height: 37px;
 
-  color: #fafafa;
+  color: var(--color-text);
   background-color: transparent;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -107,7 +107,7 @@
 
 .hero-social-item:hover,
 .hero-social-item:active {
-  border-color: var(--main-text);
+  border-color: var(--color-text);
 }
 
 @media only screen and (min-width: 768px) {
