added html, styles and a bit js

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,3 +1,11 @@
-<section class="">
-
+<section id="reviews">
+  <h3>REVIEWS</h3>
+  <div class="cards-and-arrows swiper">
+    <ul class="cards swiper-wrapper"></ul>
+    <div class="arrows">
+      <svg class="arrow-left swiper-button-prev" width="24" height="24"></svg>
+      <svg class="arrow-right swiper-button-next" width="24" height="24"></svg>
+    </div>
+  </div>
 </section>
+<script type="module" src="../js/reviews.js"></script>
