--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,3 +1,111 @@
-.header {
-    position: relative;
+.hidden {
+    display: none;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0px;
+    padding-left: 0px;
+}
+
+h2 {
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+    color: rgba(250, 250, 250, 0.4);
+}
+
+p {
+    font-family: "Inter Tight", sans-serif;
+}
+
+
+.cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.card {
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    border-radius: 20px;
+    padding: 32px 24px;
+    max-width: 343px;
+    height: 302px;
+    margin: 32px 0px;
+}
+
+.card-img {
+    background-color: blue;
+    border-radius: 10px;
+    width: 48px;
+    height: 48px;
+    margin-top: 0px;
+    margin-bottom: 32px;
+}
+
+.card-content {
+    max-width: 295px;
+    margin: 0px;
+}
+
+.card-name {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+    color: #FAFAFA;
+    margin-bottom: 8px;
+}
+
+.card-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+    color: rgba(250, 250, 250, 0.6);
+    margin-top: 0px;
+}
+
+.arrows {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+}
+
+.arrow-left {
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    border-radius: 60px;
+    padding: 14px;
+}
+
+.arrow-right {
+    border: 1px solid rgba(250, 250, 250, 0.5);
+    border-radius: 60px;
+    padding: 14px;
+}
+
+@media screen and (min-width:768px) {
+    .hidden {
+        display: block;
+    }
+
+    .cards {
+        gap: 16px;
+    }
+
+    .arrows {
+        gap: 20px;
+    }
+}
+
+@media screen and (min-width:1440px) {
+    .card{
+        max-width: 332px;
+    }
+    .card-content{
+        max-width: 284px;
+    }
 }
