--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,5 +1,5 @@
 <section class="covers-section">
-  <h2 class="covers visually-hidden">Секція обкладинок</h2>
+  <h2 class="covers visually-hidden">Covers section</h2>
   <div class="cover-container">
     <div class="covers-row" data-speed="8">
       <ul class="covers-list"></ul>
@@ -17,4 +17,5 @@
       <ul class="covers-list"></ul>
     </div>
   </div>
+  <script type="module" src="../js/covers/js-import.js"></script>
 </section>
