--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,17 +1,3 @@
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
 
 .covers-section {
     position: relative;
@@ -53,6 +39,7 @@
     gap: 24px;
     animation: marquee 10s linear infinite;
     display: flex;
+    will-change: transform;
 }
 
 .covers-item {
