--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -17,5 +17,5 @@
       <ul class="covers-list"></ul>
     </div>
   </div>
-  <script type="module" src="../js/covers/js-import.js"></script>
+  <!-- <script type="module" src="../js/covers/js-import.js"></script> -->
 </section>
