--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,7 +40,7 @@
 
       <button class="burger-menu-button">
         <svg class="burger-menu-icon" height="28" width="28">
-          <use href="../img/icons.svg#icon-btn-menu"></use>
+          <use href="../public/img/symbol-defs.svg#icon-btn-menu"></use>
         </svg>
       </button>
 
@@ -48,7 +48,7 @@
         <div class="container mobile-menu-wrap">
           <button class="menu-close-button">
             <svg class="menu-close-icon" height="28" width="28">
-              <use href="../img/icons.svg#icon-btn-close"></use>
+              <use href="../public/img/symbol-defs.svg#icon-btn-close"></use>
             </svg>
           </button>
 
