--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -45,7 +45,7 @@
   line-height: 100%;
   letter-spacing: -0.03em;
   text-transform: uppercase;
-  color: var(--color-text);
+  color: var(--main-color);
 }
 
 @media only screen and (min-width: 768px) {
@@ -82,7 +82,7 @@
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.02em;
-  color: var(--color-text);
+  color: var(--main-color);
 }
 
 @media only screen and (min-width: 768px) {
