--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -7,7 +7,7 @@
             About me
             <button type="button" class="ac-trigger">
               <svg class="icon" width="20" height="20">
-                <use href="./img/icons.svg#icon-arrow-top"></use>
+                <use href="./public/symbol-defts.svg#icon-arrow-top"></use>
               </svg>
             </button>
           </h3>
@@ -47,7 +47,7 @@
             Role
             <button type="button" class="ac-trigger">
               <svg class="icon" width="20" height="20">
-                <use href="./img/icons.svg#icon-arrow-top"></use>
+                <use href="./public/symbol-defts.svg#icon-arrow-top"></use>
               </svg>
             </button>
           </h3>
@@ -70,7 +70,7 @@
             Education
             <button type="button" class="ac-trigger">
               <svg class="icon" width="20" height="20">
-                <use href="./img/icons.svg#icon-arrow-top"></use>
+                <use href="./public/symbol-defts.svg#icon-arrow-top"></use>
               </svg>
             </button>
           </h3>
@@ -111,7 +111,7 @@
         </ul>
       </div>
       <svg class="btn-next">
-        <use href="./img/sprite.svg#icon-arrow-right"></use>
+        <use href="./public/symbol-defts.svg#icon-arrow-right"></use>
       </svg>
     </div>
   </div>
