--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,12 +1,7 @@
 
-
-h3 {
-    font-family: "Inter Tight", sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: -0.02em;
-    color: rgba(250, 250, 250, 0.4);
+.not-found {
+    margin: 30px auto;
+    font-size: 36px;
 }
 
 p {
@@ -59,7 +54,7 @@ p {
 }
 
 .arrow{
-    border: 1px solid rgba(250, 250, 250, 0.2);
+    border: 1px solid rgba(250, 250, 250, 0.5);
     border-radius: 60px;
     padding: 14px;
     width: 68px;
@@ -67,8 +62,12 @@ p {
     background-color: transparent;
 }
 
+.arrow:hover{
+    background-color: transparent;
+}
+
 .blocked-arrow {
-    border: 1px solid rgba(250, 250, 250, 0.5);
+    border: 1px solid rgba(250, 250, 250, 0.2);
 }
 
 @media screen and (min-width:768px) {
