--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -1,3 +1,210 @@
-.header {
-    position: relative;
+.work_together {
+}
+
+.work_together_container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+/* ==================================== */
+
+.work_together_wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-bottom: 63px;
+  align-items: flex-start;
+}
+
+.work_together_wrap_picture {
+  display: flex;
+  gap: 8px;
+  justify-content: flex-start;
+}
+
+.work_together_logo {
+  border-radius: 12px;
+  background: url(<path-to-image>) lightgray -39.5px -8.999px / 301.752%
+    201.193% no-repeat;
+}
+
+.work_together_wrap_logo_text {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+}
+
+.work_together_wrap_logo_text span {
+  color: var(--accent-color);
+}
+
+/* ==================================== */
+
+.work_together_form {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  padding-bottom: 64px;
+}
+
+.work_together_wrap_form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.work_together_wrap_email,
+.work_together_wrap_textarea {
+  border-bottom: 1px solid rgba(250, 250, 250, 0.2);
+  padding-bottom: 20px;
+}
+
+.work_together_input_email {
+  /* background-color: #1c1d20; */
+  background-color: var(--main-background-color);
+  /* color: rgba(250, 250, 250, 0.6); */
+  color: var(--accent-colorcolor-text);
+  border: none;
+  padding: 0px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  width: 343px;
+  height: 24px;
+}
+
+.work_together_input_text {
+  background-color: var(--main-background-color);
+  height: 24px;
+  width: 343px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  border: none;
+  outline: none;
+  resize: none;
+  padding: 0px;
+
+  /* color: rgba(250, 250, 250, 0.6); */
+  color: var(--accent-colorcolor-text);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+}
+.work_together_button {
+  /* color: #fafafa;
+  background-color: var(--accent-color);
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: -0.02em;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.work_together_button:hover,
+.work_together_button:focus,
+.work_together_button:active {
+  background-color: var(--accent-color-hover);
+}
+
+/* ========================= */
+
+.work_together_address_list {
+  display: inline-flex;
+  justify-content: flex-start;
+  gap: 4px;
+}
+
+.work_together_address_item {
+  border-radius: 60px;
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  padding: 10px 12px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work_together_address_item:hover,
+.work_together_address_item:focus,
+.work_together_address_item:active {
+  border: 1px solid #fafafa;
+}
+
+.work_together_address_link {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: -0.02em;
+}
+/* ============================== */
+
+.work_together_backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: rgba(15, 15, 16, 0.6);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 138px 16px;
+}
+
+.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+}
+
+.work_together_modal {
+  border-radius: 20px;
+  border: 1px solid rgba(250, 250, 250, 0.1);
+  background-color: var(--main-background-color);
+  position: relative;
+}
+
+.work_together_modal_close_btn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  /*! ========== */
+  width: 22px;
+  height: 22px;
+  color: white;
+  /*! ============== */
+}
+
+.work_together_modal_wrap_messages {
+  padding: 64px 32px 64px 32px;
+}
+
+.work_together_modal_title,
+.work_together_modal_text {
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  text-align: center;
+}
+
+.work_together_modal_title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 16px;
+  /* line-height: 1.5;
+  letter-spacing: -0.02em; */
+  /* text-align: center; */
+}
+
+.work_together_modal_text {
+  color: var(--color-text);
+  font-weight: 500;
+  /* line-height: 1.5;
+  letter-spacing: -0.02em; */
+  /* text-align: center; */
+  /* color: rgba(250, 250, 250, 0.6); */
 }
