--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,3 +1,21 @@
-<section class="">
-
+<section class="covers-section">
+  <h2 class="covers visually-hidden">Covers section</h2>
+  <div class="cover-container">
+    <div class="covers-row" data-speed="8">
+      <ul class="covers-list"></ul>
+    </div>
+    <div class="covers-row" data-speed="10">
+      <ul class="covers-list"></ul>
+    </div>
+    <div class="covers-row" data-speed="12">
+      <ul class="covers-list"></ul>
+    </div>
+    <div class="covers-row" data-speed="14">
+      <ul class="covers-list"></ul>
+    </div>
+    <div class="covers-row" data-speed="16">
+      <ul class="covers-list"></ul>
+    </div>
+  </div>
+  <!-- <script type="module" src="../js/covers/js-import.js"></script> -->
 </section>
