--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,17 +1,17 @@
 <section id="reviews">
   <div class="container">
-    <h3>REVIEWS</h3>
+    <h3 class="common-section-title">REVIEWS</h3>
     <div class="cards-and-arrows swiper">
       <ul class="cards swiper-wrapper"></ul>
       <div class="arrows">
         <button class="swiper-button-prev arrow">
           <svg width="24" height="24">
-            <use href=""></use>
+            <use href="../img/symbol-defs.svg#"></use>
           </svg>
         </button>
         <button class="swiper-button-next arrow">
           <svg width="24" height="24">
-            <use href=""></use>
+            <use href="../img/symbol-defs.svg#"></use>
           </svg>
         </button>
       </div>
