benefits-new elements
поміняла шлях, можеш глянути чи з іконками все окей? Та додала якірне посилання на work-together

--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -9,7 +9,7 @@
                 <li class="benefits-item">
                     <div class="benefits-svg-wrap">
                         <svg class="benefits-svg" width="24" height="24">
-                            <use href="./img/symbol-defs.svg#icon-user" />
+                            <use href="./public/symbol-defs.svg#icon-user" />
                         </svg>
                     </div>
                     <h3 class="benefits-subtitle">Expertise</h3>
@@ -21,7 +21,7 @@
                 <li class="benefits-item">
                     <div class="benefits-svg-wrap">
                         <svg class="benefits-svg" width="24" height="24">
-                            <use href="./img/symbol-defs.svg#icon-message" />
+                            <use href="./public/symbol-defs.svg#icon-message" />
                         </svg>
                     </div>
                     <h3 class="benefits-subtitle">Communication</h3>
@@ -33,7 +33,7 @@
                 <li class="benefits-item">
                     <div class="benefits-svg-wrap">
                         <svg class="benefits-svg" width="24" height="24">
-                            <use href="./img/symbol-defs.svg#icon-brush" />
+                            <use href="./public/symbol-defs.svg#icon-brush" />
                         </svg>
                     </div>
                     <h3 class="benefits-subtitle">Art</h3>
@@ -45,7 +45,7 @@
                 <li class="benefits-item">
                     <div class="benefits-svg-wrap">
                         <svg class="benefits-svg" width="24" height="24">
-                            <use href="./img/symbol-defs.svg#icon-hourglass" />
+                            <use href="./public/symbol-defs.svg#icon-hourglass" />
                         </svg>
                     </div>
                     <h3 class="benefits-subtitle">Urgent execution</h3>
@@ -57,7 +57,7 @@
 
             </ul>
 
-            <a href="#work-together" class="benefits-button">Order the project</a>
+            <a class="benefits-button" href="#work-together">Order the project</a>
 
 
         </div>
