correct  project section
Don`t forget to remove ::before / ::after on navigation

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -109,12 +109,12 @@
       <div class="slider-navigation">
         <div class="swiper-button-prev" aria-label="Previous slide">
           <svg width="24" height="24">
-            <use href="/img/symbol-defs.svg/#icon-arrow-left"></use>
+            <use href="/symbol-defs.svg/#icon-arrow-left"></use>
           </svg>
         </div>
         <div class="swiper-button-next" aria-label="Next slide">
           <svg width="24" height="24" >
-            <use href="/img/symbol-defs.svg/#icon-arrow-right"></use>
+            <use href="/symbol-defs.svg/#icon-arrow-right"></use>
           </svg>
         </div>
       </div>
