--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -109,7 +109,7 @@
         type="button"
       >
         <svg class="work_together_modal_close_icon" width="22" height="22">
-          <use href="../public/symbol-defs.svg#icon-btn-close"></use>
+          <use href="../img/icons.svg#icon-btn-close"></use>
         </svg>
       </button>
       <div class="work_together_modal_wrap_messages">
