--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -1,4 +1,4 @@
-<section class="about-me">
+<section id="about-me" class="about-me">
     <div class="container">
         <div class="about-div">
             <ul class="accordion-block no-animation">
