--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,7 +69,7 @@
             </ul>
           </nav>
 
-          <a href="" class="menu-order-button">Order the project</a>
+          <a href="#" class="menu-order-button">Order the project</a>
         </div>
       </div>
 
