--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,5 +1,6 @@
 <section id="projects" class="projects">
-  <h2 class="projects-header">PROJECTS</h2>
+  <div class="container">
+    <h2 class="projects-header">PROJECTS</h2>
   <div class="swiper">
 
       <!-- Wrapper -->
@@ -109,14 +110,15 @@
       <div class="slider-navigation">
         <div class="swiper-button-prev" aria-label="Previous slide">
           <svg width="24" height="24">
-            <use href="/symbol-defs.svg/#icon-arrow-left"></use>
+            <use href="/symbol-defs.svg#icon-aboutme"></use>
           </svg>
         </div>
         <div class="swiper-button-next" aria-label="Next slide">
           <svg width="24" height="24" >
-            <use href="/symbol-defs.svg/#icon-arrow-right"></use>
+            <use href="/symbol-defs.svg#icon-right"></use>
           </svg>
         </div>
       </div>
+  </div>
   </div>
 </section>
