--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,27 +1,27 @@
 <footer class="work_together" id="work-together">
   <div class="work_together_background_image">
-    <div class="container work_together_container">
+    <div class="container-work work_together_container container">
       <div class="work_together_wrap">
         <div class="work_together_wrap_picture">
           <picture>
             <source
               srcset="
-                ../public/img/work-together-img/foto-70x70px-1x.jpg 1x,
-                ../public/img/work-together-img/foto-70x70px-2x.jpg 2x
+                /img/work-together-img/foto-70x70px-1x.jpg 1x,
+                /img/work-together-img/foto-70x70px-2x.jpg 2x
               "
               type="image/jpeg"
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                ../public/img/work-together-img/foto-44x44px-1x.jpg 1x,
-                ../public/img/work-together-img/foto-44x44px-2x.jpg 2x
+                /img/work-together-img/foto-44x44px-1x.jpg 1x,
+                /img/work-together-img/foto-44x44px-2x.jpg 2x
               "
               type="image/jpeg"
               media="(max-width: 375px)"
             />
             <img
-              src="../public/img/work-together-img/foto-44x44px-1x.jpg"
+              src="/img/work-together-img/foto-44x44px-1x.jpg"
               class="work_together_logo"
               alt="foto"
             />
@@ -109,7 +109,7 @@
         type="button"
       >
         <svg class="work_together_modal_close_icon" width="22" height="22">
-          <use href="../img/icons.svg#icon-btn-close"></use>
+          <use href="#"></use>
         </svg>
       </button>
       <div class="work_together_modal_wrap_messages">
