--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,8 +1,8 @@
-.projects {
+/* .projects {
   width: 100vw;
   max-width: 320px;
   padding: 16px;
-}
+} */
 
 .projects-header {
   font-size: 16px;
@@ -135,20 +135,20 @@
   fill: var(--swiper-btn-disabled);
 }
 
-@media screen and (min-width: 320px) {
+/* @media screen and (min-width: 320px) {
   .projects {
     width: 100%;
     max-width: 375px;
     margin: 0 auto;
     padding: 16px;
   }
-}
+} */
 
 @media screen and (min-width: 768px) {
-  .projects {
+  /* .projects {
     max-width: 1280px;
     padding: 64px 32px 0;
-  }
+  } */
 
   .project-content {
     padding: 64px;
@@ -190,9 +190,9 @@
 }
 
 @media only screen and (min-width: 1440px) {
-  .projects {
+  /* .projects {
     max-width: 1440px;
-  }
+  } */
 
   .tags-list {
     margin-bottom: 223px;
