--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,12 +6,12 @@
       <div class="arrows">
         <button class="swiper-button-prev arrow">
           <svg width="24" height="24">
-            <use href="../img/symbol-defs.svg#"></use>
+            <use href="/symbol-defs.svg#"></use>
           </svg>
         </button>
         <button class="swiper-button-next arrow">
           <svg width="24" height="24">
-            <use href="../img/symbol-defs.svg#"></use>
+            <use href="/symbol-defs.svg#"></use>
           </svg>
         </button>
       </div>
