--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,6 +1,6 @@
 <footer class="work_together" id="work-together">
   <div class="work_together_background_image">
-    <div class="container-work work_together_container container">
+    <div class="work_together_container container">
       <div class="work_together_wrap">
         <div class="work_together_wrap_picture">
           <picture>
@@ -35,41 +35,52 @@
           <h2 class="work_together_wrap_logo_text">together</h2>
         </div>
       </div>
+
       <form class="work_together_form" id="work_together_form">
         <div class="work_together_wrap_form">
-          <div class="work_together_wrap_email">
-            <label
-              class="work_together_label_email visually-hidden"
-              for="user_email"
+          <div>
+            <div class="work_together_wrap_email">
+              <label
+                class="work_together_label_email visually-hidden"
+                for="work_together_email"
+              >
+                email</label
+              >
+              <input
+                class="work_together_input_email common-text"
+                name="email"
+                id="work_together_email"
+                type="email"
+                placeholder="clients@gmail.com"
+              />
+            </div>
+
+            <div
+              id="work_together_message_wrap"
+              class="work_together_wrap_succes"
             >
-              email</label
-            >
-            <input
-              class="work_together_input_email common-text"
-              name="email"
-              id="user_email"
-              type="email"
-              placeholder="clients@gmail.com"
-              pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-              required
-            />
+              <p
+                id="work_together_message_content"
+                class="work_together_succes"
+              ></p>
+            </div>
           </div>
 
           <div class="work_together_wrap_textarea">
             <label
               class="work_together_label_textarea visually-hidden"
-              for="user_comment"
+              for="work_together_comment"
               >comments</label
             >
             <textarea
               class="work_together_input_text common-text"
               name="comment"
-              id="user_comment"
+              id="work_together_comment"
               placeholder="comments"
-              required
             ></textarea>
           </div>
         </div>
+
         <button
           class="work_together_button"
           id="work_together_buttonSend"
@@ -79,6 +90,7 @@
           Send
         </button>
       </form>
+
       <address class="work_together_address">
         <ul class="work_together_address_list">
           <li class="work_together_address_item">
@@ -97,6 +109,7 @@
       </address>
     </div>
   </div>
+
   <div
     class="work_together_backdrop"
     id="together_backdrop_modal_backdrop"
@@ -108,9 +121,10 @@
         data-modal-close
         type="button"
       >
-        <svg class="work_together_modal_close_icon" width="22" height="22">
+        A
+        <!-- <svg class="work_together_modal_close_icon" width="22" height="22">
           <use href="#"></use>
-        </svg>
+        </svg> -->
       </button>
       <div class="work_together_modal_wrap_messages">
         <h5
