fixed swiper, again

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,11 +1,9 @@
 <section id="projects" class="projects">
   <div class="container">
     <h2 class="projects-header">PROJECTS</h2>
-  <div class="swiper">
-
+    <div class="swiper">
       <!-- Wrapper -->
       <div class="swiper-wrapper">
-
         <!-- Slide 1 -->
         <div class="swiper-slide">
           <div class="projects-item">
@@ -16,17 +14,20 @@
                 <li class="node-js-item"><span class="tag">#node js</span></li>
                 <li class="git-item"><span class="tag">#git</span></li>
               </ul>
-              <p class="project-descr">Programming Across Borders: Ideas, Technologies, Innovations</p>
+              <p class="project-descr">
+                Programming Across Borders: Ideas, Technologies, Innovations
+              </p>
               <button type="button" class="project-btn">See project</button>
             </div>
             <div class="project-img-wrapper">
-              <img class="project-img"
-                src="../img/projects/mobile/read-journey-mb-1x.jpg" 
+              <img
+                class="project-img"
+                src="../img/projects/mobile/read-journey-mb-1x.jpg"
                 srcset="
-                  ../img/projects/mobile/read-journey-mb-1x.jpg 375w,
-                  ../img/projects/mobile/read-journey-mb@2x.jpg 750w,
-                  ../img/projects/tablet/read-journey-tt-1x.jpg 768w,
-                  ../img/projects/tablet/read-journey-tt@2x.jpg 1536w,
+                  ../img/projects/mobile/read-journey-mb-1x.jpg   375w,
+                  ../img/projects/mobile/read-journey-mb@2x.jpg   750w,
+                  ../img/projects/tablet/read-journey-tt-1x.jpg   768w,
+                  ../img/projects/tablet/read-journey-tt@2x.jpg  1536w,
                   ../img/projects/desktop/read-journey-dt-1x.jpg 1280w,
                   ../img/projects/desktop/read-journey-dt@2x.jpg 1440w
                 "
@@ -34,7 +35,8 @@
                        (max-width: 768px) 100vw,
                        (max-width: 1440px) 50vw,
                        33vw"
-                alt="Read journey project">
+                alt="Read journey project"
+              />
             </div>
           </div>
         </div>
@@ -49,17 +51,20 @@
                 <li class="node-js-item"><span class="tag">#node js</span></li>
                 <li class="git-item"><span class="tag">#git</span></li>
               </ul>
-              <p class="project-descr">Programming Across Borders: Ideas, Technologies, Innovations</p>
+              <p class="project-descr">
+                Programming Across Borders: Ideas, Technologies, Innovations
+              </p>
               <button type="button" class="project-btn">See project</button>
             </div>
             <div class="project-img-wrapper">
-              <img class="project-img"
-                src="../img/projects/mobile/pet-love-mb-1x.jpg" 
+              <img
+                class="project-img"
+                src="../img/projects/mobile/pet-love-mb-1x.jpg"
                 srcset="
-                  ../img/projects/mobile/pet-love-mb-1x.jpg 375w,
-                  ../img/projects/mobile/pet-love-mb@2x.jpg 750w,
-                  ../img/projects/tablet/pet-love-tt-1x.jpg 768w,
-                  ../img/projects/tablet/pet-love-tt@2x.jpg 1536w,
+                  ../img/projects/mobile/pet-love-mb-1x.jpg   375w,
+                  ../img/projects/mobile/pet-love-mb@2x.jpg   750w,
+                  ../img/projects/tablet/pet-love-tt-1x.jpg   768w,
+                  ../img/projects/tablet/pet-love-tt@2x.jpg  1536w,
                   ../img/projects/desktop/pet-love-dt-1x.jpg 1440w,
                   ../img/projects/desktop/pet-love-dt@2x.jpg 1440w
                 "
@@ -67,11 +72,12 @@
                        (max-width: 768px) 100vw,
                        (max-width: 1440px) 50vw,
                        33vw"
-                alt="Pet Love project">
+                alt="Pet Love project"
+              />
             </div>
           </div>
         </div>
-        
+
         <!-- Slide 3 -->
         <div class="swiper-slide">
           <div class="projects-item">
@@ -82,17 +88,20 @@
                 <li class="node-js-item"><span class="tag">#node js</span></li>
                 <li class="git-item"><span class="tag">#git</span></li>
               </ul>
-              <p class="project-descr">Programming Across Borders: Ideas, Technologies, Innovations</p>
+              <p class="project-descr">
+                Programming Across Borders: Ideas, Technologies, Innovations
+              </p>
               <button type="button" class="project-btn">See project</button>
             </div>
             <div class="project-img-wrapper">
-              <img class="project-img"
-                src="../img/projects/mobile/vocab-builder-mb-1x.jpg" 
+              <img
+                class="project-img"
+                src="../img/projects/mobile/vocab-builder-mb-1x.jpg"
                 srcset="
-                  ../img/projects/mobile/vocab-builder-mb-1x.jpg 375w,
-                  ../img/projects/mobile/vocab-builder-mb@2x.jpg 750w,
-                  ../img/projects/tablet/vocab-builder-tt-1x.jpg 768w,
-                  ../img/projects/tablet/vocab-builder-tt@2x.jpg 1536w,
+                  ../img/projects/mobile/vocab-builder-mb-1x.jpg   375w,
+                  ../img/projects/mobile/vocab-builder-mb@2x.jpg   750w,
+                  ../img/projects/tablet/vocab-builder-tt-1x.jpg   768w,
+                  ../img/projects/tablet/vocab-builder-tt@2x.jpg  1536w,
                   ../img/projects/desktop/vocab-builder-dt-1x.jpg 1440w,
                   ../img/projects/desktop/vocab-builder-dt@2x.jpg 2880w
                 "
@@ -100,7 +109,8 @@
                        (max-width: 768px) 100vw,
                        (max-width: 1440px) 50vw,
                        33vw"
-                alt="Vocab Builder project">
+                alt="Vocab Builder project"
+              />
             </div>
           </div>
         </div>
@@ -114,11 +124,11 @@
           </svg>
         </div>
         <div class="swiper-button-next" aria-label="Next slide">
-          <svg width="24" height="24" >
+          <svg width="24" height="24">
             <use href="/symbol-defs.svg#icon-right"></use>
           </svg>
         </div>
       </div>
-  </div>
+    </div>
   </div>
 </section>
