--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,17 +1,17 @@
 <section id="reviews">
   <div class="container">
     <h3 class="common-section-title">REVIEWS</h3>
-    <div class="cards-and-arrows swiper">
+    <div class="cards-and-arrows swiper swiper-reviews">
       <ul class="cards swiper-wrapper"></ul>
       <div class="arrows">
         <button class="swiper-button-prev arrow">
           <svg width="24" height="24">
-            <use href="/symbol-defs.svg#"></use>
+            <use href="../public/symbol-defs.svg#icon-new-left"></use>
           </svg>
         </button>
         <button class="swiper-button-next arrow">
           <svg width="24" height="24">
-            <use href="/symbol-defs.svg#"></use>
+            <use href="../public/symbol-defs.svg#icon-new-right"></use>
           </svg>
         </button>
       </div>
