--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,7 +1,7 @@
 <section id="projects" class="projects">
   <div class="container">
     <h2 class="projects-header">PROJECTS</h2>
-    <div class="swiper">
+    <div class="swiper swiper-projects">
       <!-- Wrapper -->
       <div class="swiper-wrapper">
         <!-- Slide 1 -->
@@ -40,7 +40,6 @@
             </div>
           </div>
         </div>
-
         <!-- Slide 2 -->
         <div class="swiper-slide">
           <div class="projects-item">
@@ -77,7 +76,6 @@
             </div>
           </div>
         </div>
-
         <!-- Slide 3 -->
         <div class="swiper-slide">
           <div class="projects-item">
@@ -115,16 +113,15 @@
           </div>
         </div>
       </div>
-
       <!-- Navigation buttons -->
       <div class="slider-navigation">
         <div class="swiper-button-prev" aria-label="Previous slide">
-          <svg width="24" height="24">
-            <use href="/symbol-defs.svg#icon-aboutme"></use>
+          <svg class="btn-arrow" width="24" height="24">
+            <use href="/symbol-defs.svg#icon-left"></use>
           </svg>
         </div>
         <div class="swiper-button-next" aria-label="Next slide">
-          <svg width="24" height="24">
+          <svg class="btn-arrow" width="24" height="24">
             <use href="/symbol-defs.svg#icon-right"></use>
           </svg>
         </div>
