--- a/src/partials/about-me-introduction.html
+++ b/src/partials/about-me-introduction.html
@@ -6,28 +6,28 @@
         <picture>
             <source
             srcset="
-                ../public/about-me-intro/intro-lp-1x-min.png  1x,
-                ../public/about-me-intro/intro-lp-2x-min.png  2x
+                /about-me-intro/intro-lp-1x-min.png  1x,
+                /about-me-intro/intro-lp-2x-min.png  2x
             "
             media="(min-width: 1440px)"
             />
             <source
             srcset="
-                ../public/about-me-intro/intro-tb-1x-min.png  1x,
-                ../public/about-me-intro/intro-tb-2x-min.png  2x
+                /about-me-intro/intro-tb-1x-min.png  1x,
+                /about-me-intro/intro-tb-2x-min.png  2x
             "
             media="(min-width: 768px)"
             />
             <source
             srcset="
-                ../public/about-me-intro/intro-mb-1x-min.png  1x,
-                ../public/about-me-intro/intro-mb-2x-min.png  2x
+                /about-me-intro/intro-mb-1x-min.png  1x,
+                /about-me-intro/intro-mb-2x-min.png  2x
             "
             media="(max-width: 376px)"
             />
             <img
             class="intro-img"
-            src="../public/about-me-intro/intro-lp-1x-min.png"
+            src="/about-me-intro/intro-lp-1x-min.png"
             alt="a man with glasses sits next to a laptop"
             width="680"
             height="700"
