--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section id="reviews">
+<section id="reviews" class="reviews-section">
   <div class="container">
     <h3 class="common-section-title">REVIEWS</h3>
     <div class="cards-and-arrows swiper swiper-reviews">
@@ -8,7 +8,7 @@
           <svg width="24" height="24">
             <use href="../public/symbol-defs.svg#icon-new-left"></use>
           </svg>
-        </button>
+        </button> 
         <button class="swiper-button-next arrow">
           <svg width="24" height="24">
             <use href="../public/symbol-defs.svg#icon-new-right"></use>
